Fix a pile spacing issue with flipCardToPileAtSpeed.

Face up cards are given different offsets than face down cards, so we
need to be sure that the we check the final position of the card with
the correct face-up-ness.

BUG:262498

svn path=/trunk/KDE/kdegames/kpat/; revision=1212927